# threshold-signature-Frost

./: .gitignore  Cargo.toml  Makefile  README.md  package-lock.json  package.json
docs/: ARCHITECTURE.md
fserver/: Cargo.toml  README.md
fserver/src/: main.rs
helper/: Cargo.toml
helper/src/: lib.rs
keygen/dkg/: Cargo.toml
keygen/dkg/src/: helper.rs  main.rs
keygen/trusted/: Cargo.toml  README_trusted.md
keygen/trusted/src/: main.rs
offchain-verify/: Cargo.toml
offchain-verify/src/: main.rs
onchain-verify/: hardhat.config.ts  package-lock.json  package.json
onchain-verify/contracts/: AppManager.sol  IZecFrost.sol  ZecFrost.sol
onchain-verify/scripts/: helper.ts  verify-signature.ts
onchain-verify/test/: AppManager.ts  ZecFrost.ts
onchain-verify/types/ethers-contracts/: AppManager.ts  Frost.ts  IZecFrost.ts  ZecFrost.ts  hardhat.d.ts  index.ts
onchain-verify/types/ethers-contracts/factories/: AppManager__factory.ts  IZecFrost__factory.ts  ZecFrost__factory.ts  index.ts
scripts/: make_users.js  run_e2e.sh
signing/: Cargo.toml
signing/src/: main.rs
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs  lib_test.rs
wasm/test/: index.html
wasm/web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
wasm/web/src/: App.css  App.tsx  index.css  lib.ts  main.tsx  types.ts  useModal.ts
wasm/web/src/pages/: DkgPage.tsx  MainPage.css  MainPage.tsx  SigningPage.tsx
