[workspace]
resolver = "2"
members = ["keygen/trusted", "signing", "offchain-verify"]

[workspace.package]
edition = "2021"

[workspace.dependencies]
# Zcash Foundation FROST crates (git to ensure API compatibility)
frost-core = { git = "https://github.com/ZcashFoundation/frost", package = "frost-core", features = ["std", "serde"] }
frost-secp256k1 = { git = "https://github.com/ZcashFoundation/frost", package = "frost-secp256k1", features = ["std", "serde"] }

k256 = { version = "0.13", features = ["arithmetic"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
sha3 = "0.10"
anyhow = "1"
