[package]
name = "fserver"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
# Workspace-inherited dependencies
anyhow.workspace = true
frost-core = { workspace = true, features = ["serde"] }
frost-secp256k1 = { workspace = true, features = ["serde"] }
k256 = { workspace = true, features = ["ecdsa", "ecdh"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
bincode.workspace = true
hex.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
sha3.workspace = true
signature = { workspace = true, features = ["digest"] }
aes-gcm = { workspace = true, features = ["aes"] }
sha2.workspace = true
rand.workspace = true

# Server-specific dependencies
axum = { version = "0.7.5", features = ["ws"] }
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
uuid = { version = "1.8.0", features = ["v4"] }
log = "0.4.21"
chrono = "0.4.38"
colored = "2.1.0"
http = "1.1.0"
hyper = "1.3.1"
hyper-util = "0.1.3"
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
secp256k1 = "0.29.0"
base64 = "0.22.1"
schnorr_fun = "0.11.0"
serde_with = "3.8.1"
itertools = "0.13.0"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
headers = "0.4.0"
mime = "0.3.17"
reqwest = "0.12.4"
bytes = "1.6.0"
elliptic-curve = "0.13.8"
thiserror = "1.0.59"
eyre = "0.6.12"
color-eyre = "0.6.3"
tonic = "0.11.0"
prost = "0.12.4"
prost-types = "0.12.4"
tokio-stream = "0.1.15"
async-trait = "0.1.80"
serde_derive = "1.0.197"
serde_repr = "0.1.18"
toml = "0.8.12"
config = "0.14.0"
once_cell = "1.19.0"
lazy_static = "1.4.0"
regex = "1.10.4"
walkdir = "2.5.0"
tempfile = "3.10.1"
test-log = "0.2.15"
rstest = "0.19.0"
test-case = "3.3.1"
serial_test = "3.0.0"
ntest = "0.9.0"
trybuild = "1.0.91"

[build-dependencies]
tonic-build = "0.11.0"
vergen = "8.3.1"
shadow-rs = "0.29.0"
anyhow = "1.0.82"
eyre = "0.6.12"
color-eyre = "0.6.3"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tracing-core = "0.1.32"
tracing-log = "0.2.0"
tonic = "0.11.0"
prost = "0.12.4"
prost-types = "0.12.4"
tokio-stream = "0.1.15"
futures-util = "0.3.30"
async-trait = "0.1.80"
serde_derive = "1.0.197"
serde_repr = "0.1.18"
toml = "0.8.12"
config = "0.14.0"
once_cell = "1.19.0"
lazy_static = "1.4.0"
regex = "1.10.4"
walkdir = "2.5.0"
tempfile = "3.10.1"
test-log = "0.2.15"
rstest = "0.19.0"
test-case = "3.3.1"
serial_test = "3.0.0"
ntest = "0.9.0"
trybuild = "1.0.91"
