[package]
name = "signing"
version = "0.1.0"
edition = "2021"

[dependencies]
frost-core = { workspace = true }
frost-secp256k1 = { workspace = true }
k256 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }
clap = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
signature = { workspace = true }
anyhow = { workspace = true }
aes-gcm = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
futures = "0.3.31"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
rand_core = "0.6.4"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
helper = { path = "../helper" }
