[package]
name = "tokamak-frost-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
frost-core.workspace = true
frost-secp256k1.workspace = true
eddsa.workspace = true
ark-ff.workspace = true
ark-ed-on-bls12-381.workspace = true
k256.workspace = true
signature.workspace = true
sha3.workspace = true
sha2.workspace = true
rand.workspace = true
getrandom = { version = "0.2", features = ["js"] }
bincode.workspace = true
serde = { workspace = true, features = ["derive"] }
hex.workspace = true
anyhow.workspace = true
uuid = { version = "1.4.1", features = ["v4", "js"] }
console_error_panic_hook = "0.1.7"
serde_json.workspace = true
aes-gcm.workspace = true
serde-wasm-bindgen = "0.6.5"
wasm-gen = "0.1.4"
blake3.workspace = true
ark-ec.workspace = true
ark-serialize.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
